<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.darius.numbers.screens.main.MainActivity">

    <View
        android:id="@+id/main_v_center"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/main_bt_date_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_v_center"
        android:text="@string/main_date_trivia" />

    <Button
        android:id="@+id/main_bt_number_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_bt_date_trivia"
        android:text="@string/main_number_trivia" />

    <Button
        android:id="@+id/main_bt_year_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_v_center"
        android:text="@string/main_year_trivia" />

    <Button
        android:id="@+id/main_bt_math_facts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_bt_year_trivia"
        android:text="@string/main_math_facts" />

    <Button
        android:id="@+id/main_bt_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/favorite_facts"/>

</RelativeLayout>
