<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/date_bt_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_bt_set"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_selected_the_date"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/date_tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/date_bt_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>


</LinearLayout>